@@ -1,3 +1,14 @@
+2009-07-14  Tyler Romeo  <tylerromeo@gmail.com>
+
+	Integrated bootstrap file into main startup script.
+	*app/controllers.py (SuperuserPanel.authenticate): Authenticate for users in root group rather than just root.
+	*app/models.py (Auth.hasGroup): Moved isAdmin function into a generic hasGroup function.
+
+	Removed accidental copy of Log class.
+	*app/models.py (Log): Fixed functions in Log class (did not have self parameter).
+
+	Moved encrypting of user passwords from user creation to request creation for increased security.
+
 2009-06-27  Tyler Romeo  <tylerromeo@gmail.com>
 
 	Created new Log model. Not yet in use.
